Shtimi i disa featurea

--- a/Fragrance/Areas/Costumer/Views/Cart/Index.cshtml
+++ b/Fragrance/Areas/Costumer/Views/Cart/Index.cshtml
@@ -37,7 +37,12 @@
                                 <div class="col-3 text-md-right pt-lg-2 pt-md-4" style="min-width: 100px;">
                                     <h6 class="fw-semibold p-0 text-nowrap">
                                         @item.Price.ToString("c")
+                                        <h6 class="fw-semibold p-0 text-nowrap">
+                                            @item.Size ml</h6>
                                         <span class="text-muted">&nbsp;x&nbsp;</span>@item.Count
+                                       
+
+                                      
                                     </h6>
                                 </div>
                                 <div class="col-6 col-sm-4 col-lg-6 pt-2">
