--- a/Fragrance/Areas/Admin/Views/Company/Index.cshtml
+++ b/Fragrance/Areas/Admin/Views/Company/Index.cshtml
@@ -4,27 +4,42 @@
         <div class="row pt-4 pb-3">
             <div class="col-6">
                 <h2 class="text-primary">
-                    Category List
+                    Company
                 </h2>
             </div>
             <div class="col-6" text-end>
                 <a asp-controller="Company" asp-action="Create" class="btn btn-primary">
-                   <i class="bi bi-plus-circle"></i> Create New Category
+                   <i class="bi bi-plus-circle"></i> Create New Company
                 </a>
             </div>
         </div>
     </div>
 
-<h1>Category List</h1>
+
 
 <table class="table table-boarder table-striped">
     <thead>
         <tr>
             <th>
-                Category Name
+                Name
             </th>
             <th>
-                Display Order 
+                StreetAddress
+            </th>
+            <th>
+                City
+            </th>
+            <th>
+                State
+            </th>
+            <th>
+                PostalCode
+            </th>
+            <th>
+                Postal Code
+            </th>
+            <th>
+                PhoneNumber
             </th>
 
         </tr>
