--- a/Fragrance/Areas/Admin/Views/Order/Details.cshtml
+++ b/Fragrance/Areas/Admin/Views/Order/Details.cshtml
@@ -115,7 +115,9 @@
                             <div class="row my-1">
                                 <div class="col-3">Order Date</div>
                                 <div class="col-9">
-                                    <input value="@Model.OrderHeader.OrderDate.ToShortDateString()" readonly type="text" class="form-control" />
+                                    <input asp-for="OrderHeader.OrderDate" type="text" class="form-control" />
+                                    <span asp-validation-for="OrderHeader.OrderDate" class="text-danger"></span>
+                                    
                                 </div>
                             </div>
                             <div class="row my-1">
